--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,9 +24,17 @@
     
     <a href="{{ url_for('index') }}">Home</a>
     
-    <a href="{{ url_for('new_entry') }}">New</a>
+    {% if current_user.is_authenticated %}
     
-    <a href="{{ url_for('logout') }}">Log out</a>
+      <a href="{{ url_for('new_entry') }}">New</a>
+      
+      <a href="{{ url_for('logout') }}">Log out</a>
+      
+    {% else %}
+      
+      <a href="{{ url_for('login') }}">Log in</a>
+    
+    {% endif %}
     
   </footer>
       
