--- a/app/templates/entry/new.html
+++ b/app/templates/entry/new.html
@@ -7,8 +7,8 @@
   <form action="{{ url_for('new_entry') }}" method="post" novalidate>
     {{ form.hidden_tag() }}
     <p>
-        {{ form.val.label }}<br>
-        {{ form.val(min='0', max='5', step="0.5") }}
+        {{ form.overall.label }}<br>
+        {{ form.overall(min='0', max='5', step="0.5") }}
       </p>
     <p>{{ form.submit() }}</p>
   </form>
