--- a/app/templates/entry/new.html
+++ b/app/templates/entry/new.html
@@ -6,10 +6,26 @@
 
   <form action="{{ url_for('new_entry') }}" method="post" novalidate>
     {{ form.hidden_tag() }}
+    
     <p>
-        {{ form.overall.label }}<br>
-        {{ form.overall(min='0', max='5', step="0.5") }}
-      </p>
+      {{ form.overall.label }}<br>
+      {{ form.overall(min='0', max='5', step="0.5") }}
+    </p>
+    <hr />
+
+    <p>
+      {{ form.outlook.label }}<br>
+      {{ form.outlook(min='0', max='5', step="0.5", value="0") }}
+    </p>
+    <p>
+      {{ form.energy.label }}<br>
+      {{ form.energy(min='0', max='5', step="0.5", value="0") }}
+    </p>
+    <p>
+      {{ form.focus.label }}<br>
+      {{ form.focus(min='0', max='5', step="0.5", value="0") }}
+    </p>
+    
     <p>{{ form.submit() }}</p>
   </form>
   
