--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,13 @@
 </head>
 <body>
   
-  <h1>{{ self.title() }}</h1>
+  <header class="page-header">
+
+    <h1 class="page-title">{{ self.title() }}</h1>
+    
+    {% block subhead %}{% endblock %}
+    
+  </header>
   
   {% with messages = get_flashed_messages() %}
     {% if messages %}
