--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta name="color-scheme" content="dark light">
 <title>{% block title %}{% endblock %} - Happy Days</title>
 {% assets "css_all" %}
   <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}">
