--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,7 +1,154 @@
-:root {
-  color-scheme: light dark;
-}
 
 body {
   font-family: 'system-ui';
+  color: var(--main-font);
+  background-color: var(--main-bg);
+}
+
+
+
+
+a:visited {
+  color: var(--link-visited);
+}
+
+a {
+	color: var(--link);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--link-hover);
+  text-decoration: underline;
+}
+
+a:active {
+  color: var(--link-active);
+}
+
+
+
+
+.page-header,
+.page-body {
+  text-align: center;
+  padding: 0 5vw;
+}
+
+.page-body .content {
+  max-width: 60rem; 
+  margin: 0 auto;
+}
+
+
+
+
+
+
+/**/
+
+.recent-entries {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: stretch;
+  height: 10em;
+  margin: 0 -0.5px;
+  padding: 0;
+}
+
+.recent-entries .entry {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: calc((100% - 1px) / 30);
+  margin: 0 .5px;
+  overflow: hidden;
+}
+
+.recent-entries .entry .link {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: auto;
+  flex-grow: 0;
+  flex-shrink: 1;
+  background-color: var(--entry);
+  flex-basis: 50%;
+  transition: flex-basis 0.15s ease-in-out;
+}
+
+.recent-entries .entry.entry-val-0 .link { flex-basis: 0; }
+
+.recent-entries .entry.entry-val-05 .link { flex-basis: 10%; }
+
+.recent-entries .entry.entry-val-1 .link { flex-basis: 20%; }
+
+.recent-entries .entry.entry-val-15 .link { flex-basis: 30%; }
+
+.recent-entries .entry.entry-val-2 .link { flex-basis: 40%; }
+
+.recent-entries .entry.entry-val-25 .link { flex-basis: 50%; }
+
+.recent-entries .entry.entry-val-3 .link { flex-basis: 60%; }
+
+.recent-entries .entry.entry-val-35 .link { flex-basis: 70%; }
+
+.recent-entries .entry.entry-val-4 .link { flex-basis: 80%; }
+
+.recent-entries .entry.entry-val-45 .link { flex-basis: 90%; }
+
+.recent-entries .entry.entry-val-5 .link { flex-basis: 100%; }
+
+.recent-entries .entry:hover .link {
+  background-color: var(--entry-on);
+}
+
+.recent-entries .entry.multiple-entries .link::after {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  content: '';
+  width: 75%;
+  height: 0;
+  padding-bottom: 75%;
+  line-height: 1;
+  background-color: var(--entry-off);
+  transform: rotate(45deg);
+  margin-right: -38%;
+  margin-bottom: -38%;
+}
+
+.recent-entries .entry .summary {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+}
+
+
+
+
+/* Footer */
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--secondary-bg);
+}
+
+.footer .nav .nav-items {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 1em;
+}
+
+.footer .nav .nav-items .nav-item {
+ list-style-type: none; 
 }
