--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -22,7 +22,7 @@
 
   	{% set entry_val_class = 'entry-val-' ~ val|replace('.', '') %}
  
-    <li class="entry {{ entry_val_class }}{% if multiple_entries %} multiple-entries{% endif %}">
+    <li class="entry {{ entry_val_class }}{% if multiple_entries %} multiple-entries{% endif %}" data-val-raw="{{ entry.avg }}">
 
     	<a href="#" class="link"><span class="summary">{{ entry.created_on.strftime('%b. %d') }} - {{ val }}{% if multiple_entries %} *{% endif %}</span></a>
 
