--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -45,7 +45,8 @@ a:active {
 
 
 
-/**/
+/* Dashboard */
+
 
 .recent-entries {
   display: flex;
@@ -54,53 +55,26 @@ a:active {
   height: 10em;
   margin: 0 -0.5px;
   padding: 0;
+  border: 1px solid var(--outline-dark);
+  background-color: var(--deep-bg);
 }
 
 .recent-entries .entry {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  display: block;
   width: calc((100% - 1px) / 30);
+  height: 100%;
   margin: 0 .5px;
   overflow: hidden;
 }
 
 .recent-entries .entry .link {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   position: relative;
-  display: block;
   width: 100%;
-  height: auto;
-  flex-grow: 0;
-  flex-shrink: 1;
-  background-color: var(--entry);
-  flex-basis: 50%;
-  transition: flex-basis 0.15s ease-in-out;
-}
-
-.recent-entries .entry.entry-val-00 .link { flex-basis: 0; }
-
-.recent-entries .entry.entry-val-05 .link { flex-basis: 10%; }
-
-.recent-entries .entry.entry-val-10 .link { flex-basis: 20%; }
-
-.recent-entries .entry.entry-val-15 .link { flex-basis: 30%; }
-
-.recent-entries .entry.entry-val-20 .link { flex-basis: 40%; }
-
-.recent-entries .entry.entry-val-25 .link { flex-basis: 50%; }
-
-.recent-entries .entry.entry-val-30 .link { flex-basis: 60%; }
-
-.recent-entries .entry.entry-val-35 .link { flex-basis: 70%; }
-
-.recent-entries .entry.entry-val-40 .link { flex-basis: 80%; }
-
-.recent-entries .entry.entry-val-45 .link { flex-basis: 90%; }
-
-.recent-entries .entry.entry-val-50 .link { flex-basis: 100%; }
-
-.recent-entries .entry:hover .link {
-  background-color: var(--entry-on);
+  height: 100%;
+  overflow: hidden;
 }
 
 .recent-entries .entry.multiple-entries .link::after {
@@ -120,13 +94,39 @@ a:active {
 }
 
 .recent-entries .entry .summary {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  flex-basis: 50%;
+  flex-grow: 0;
+  flex-shrink: 1;
+  transition: flex-basis 0.15s ease-in-out;
+  text-indent: -99em;
   overflow: hidden;
+  background-color: var(--entry);
+}
+
+.recent-entries .entry.entry-val-00 .link .summary { flex-basis: 0; }
+
+.recent-entries .entry.entry-val-05 .link .summary { flex-basis: 10%; }
+
+.recent-entries .entry.entry-val-10 .link .summary { flex-basis: 20%; }
+
+.recent-entries .entry.entry-val-15 .link .summary { flex-basis: 30%; }
+
+.recent-entries .entry.entry-val-20 .link .summary { flex-basis: 40%; }
+
+.recent-entries .entry.entry-val-25 .link .summary { flex-basis: 50%; }
+
+.recent-entries .entry.entry-val-30 .link .summary { flex-basis: 60%; }
+
+.recent-entries .entry.entry-val-35 .link .summary { flex-basis: 70%; }
+
+.recent-entries .entry.entry-val-40 .link .summary { flex-basis: 80%; }
+
+.recent-entries .entry.entry-val-45 .link .summary  { flex-basis: 90%; }
+
+.recent-entries .entry.entry-val-50 .link .summary  { flex-basis: 100%; }
+
+.recent-entries .entry .link:hover .summary {
+  background-color: var(--entry-on);
 }
 
 
