--- a/app/static/css/colors.css
+++ b/app/static/css/colors.css
@@ -1,4 +1,5 @@
 :root {
+	
   color-scheme: light dark;
 
 	--main-bg: #212121;
@@ -20,7 +21,15 @@
 	--border-dark: #111;
 	--border-medium: #1a1a1a;
 	--border-light: #444;
+	
+	--btn-bg: #505FB3;
+	--btn-entry-bg: #6AB364;
+	
 }
+
+
+
+
 
 @media ( prefers-color-scheme: light ) {
 
