--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -4,29 +4,39 @@
 
 {% block content %}
 
-  {% if recent_entries %}
+  {% if entries_by_day %}
   <ul class="recent-entries">
-  {% for entry in recent_entries %}
+  {% for entry in entries_by_day %}
+  
+    {% set entry = entry[0] %}
+  
+    {% if entry.has_no_entry %}
     
-    {% if entry.num_entries > 1 %}
-
-      {% set val = ((entry.avg * 2)|round(0, 'ceil') / 2) %}
-      {% set multiple_entries = True %}
-
+      <li class="entry no-results"><span class="summary">No entries</span></li>
+      
     {% else %}
-
-      {% set val = entry.avg %}
-      {% set multiple_entries = False %}
-
+      
+      {% if entry.num_entries > 1 %}
+  
+        {% set val = ((entry.avg * 2)|round(0, 'ceil') / 2) %}
+        {% set multiple_entries = True %}
+  
+      {% else %}
+  
+        {% set val = entry.avg %}
+        {% set multiple_entries = False %}
+  
+      {% endif %}
+  
+      {% set entry_val_class = 'entry-val-' ~ val|replace('.', '') %}
+   
+      <li class="entry {{ entry_val_class }}{% if multiple_entries %} multiple-entries{% endif %}">
+  
+      <a href="#" class="link">{{ entry.days_ago|round(0, 'floor')|int }}<span class="summary">{{ entry.created_on.strftime('%b. %d') }} - {{ val }}{% if multiple_entries %} *{% endif %}</span></a>
+  
+      </li>
+      
     {% endif %}
-
-    {% set entry_val_class = 'entry-val-' ~ val|replace('.', '') %}
- 
-    <li class="entry {{ entry_val_class }}{% if multiple_entries %} multiple-entries{% endif %}" data-val-raw="{{ entry.avg }}" data-val-rounded="{{ entry.avg|round(0, 'ceil') }}">
-
-    	<a href="#" class="link">{{ entry.days_ago|round(0, 'floor')|int }}<span class="summary">{{ entry.created_on.strftime('%b. %d') }} - {{ val }}{% if multiple_entries %} *{% endif %}</span></a>
-
-  	</li>
 
   {% endfor %}
   </ul>
