--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -32,7 +32,7 @@
    
       <li class="entry {{ entry_val_class }}{% if multiple_entries %} multiple-entries{% endif %}">
   
-      <a href="#" class="link">{{ entry.days_ago|round(0, 'floor')|int }}<span class="summary">{{ entry.created_on.strftime('%b. %d') }} - {{ val }}{% if multiple_entries %} *{% endif %}</span></a>
+      <a href="{{ url_for('entry_by_date', date_str=entry.created_on.strftime('%Y-%m-%d')) }}" class="link">{{ entry.days_ago|round(0, 'floor')|int }}<span class="summary">{{ entry.created_on.strftime('%b. %d') }} - {{ val }}{% if multiple_entries %} *{% endif %}</span></a>
   
       </li>
       
