--- a/app/templates/entry/list.html
+++ b/app/templates/entry/list.html
@@ -14,6 +14,28 @@
 
 {% block content %}
 
+  {% if next_day or prev_day %}
+
+    <nav class="next-prev-wrap">
+
+      <ul class="next-prev">
+
+        {% if prev_day %}
+          <li class="prev"><a href="{{ url_for('entry_by_date', date_str=prev_day.day) }}" class="link">Prev</a></li>
+        {% endif %}
+
+        {% if next_day %}
+          <li class="prev"><a href="{{ url_for('entry_by_date', date_str=next_day.day) }}" class="link">Next</a></li>
+        {% endif %}
+
+      </ul>
+
+    </nav>
+
+  {% endif %}
+
+
+
   {% if entries %}
 
   {% for entry in entries %}
