HTML markup and form errors near fields

--- a/app/templates/entry/list.html
+++ b/app/templates/entry/list.html
@@ -48,13 +48,13 @@
 
       <ul class="entry-values">
         
-        <li class="entry-val-item {{ types[entry.type]|lower|replace('.', '') }}"><span class="entry-val-label">{{ types[entry.type] }}:</span> <span class="entry-val">{{ entry.val }}</span></li>
+        <li class="entry-val-item {{ types[entry.type]|lower|replace(' ', '-') }}"><span class="entry-val-label">{{ types[entry.type] }}:</span> <span class="entry-val">{{ entry.val }}</span></li>
       
         {% if entry.children is defined %}
           
           {% for subentry in entry.children %}
           
-            <li class="entry-val-item {{ types[subentry.type]|lower|replace('.', '') }}"><span class="entry-val-label">{{ types[subentry.type] }}:</span> <span class="entry-val">{{ subentry.val }}</span></li>
+            <li class="entry-val-item {{ types[subentry.type]|lower|replace(' ', '-') }}"><span class="entry-val-label">{{ types[subentry.type] }}:</span> <span class="entry-val">{{ subentry.val }}</span></li>
           
           {% endfor %}
           
