--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="color-scheme" content="dark light">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=3">
 <title>{% block title %}{% endblock %} - Happy Days</title>
 {% assets "css_all" %}
   <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}">
