--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,8 @@
-<html>
-    <head>
-        <title>{{ title }}</title>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=3">
 
         <style class="cp-pen-styles">
         :root {
@@ -29,6 +31,7 @@
         body {
           width: 100%;
           min-height: 100%;
+          padding-bottom: 80px;
           display: flex;
           flex-direction: column;
           justify-content: center;
