finishing html markup

--- a/app/templates/entry/list.html
+++ b/app/templates/entry/list.html
@@ -72,7 +72,7 @@
   
   {% else %}
   
-  <div class="entry-wrap no-entries">
+  <div class="entry-wrap no-results">
   
     <p>No entries for this date.</p>
     
