--- a/app/static/css/colors.css
+++ b/app/static/css/colors.css
@@ -25,6 +25,13 @@
 	--btn-bg: #505FB3;
 	--btn-entry-bg: #6AB364;
 
+	--msg-err: #CC1851;
+
+	--val-overall: #ffbe00;
+	--val-outlook: #8BD44C;
+	--val-energy: #f36e0e;
+	--val-focus: #6391e6;
+
 }
 
 
