--- a/app/static/css/responsive.css
+++ b/app/static/css/responsive.css
@@ -1,7 +1,11 @@
 
 
 
-@media (min-width: 720px) {
+
+
+
+
+@media (min-width: 768px) {
 
   body {
     padding-left: 7rem;
@@ -22,6 +26,16 @@
     flex-direction: column;
     height: 100%;
     max-height: 40em;
+  }
+
+
+
+  .recent-entries .entry-date .full {
+   display: block;
+  }
+
+  .recent-entries .entry-date .short {
+   display: none;
   }
 
 } 
