--- a/app/templates/entry/list.html
+++ b/app/templates/entry/list.html
@@ -21,11 +21,11 @@
       <ul class="next-prev">
 
         {% if prev_day %}
-          <li class="item prev"><a href="{{ url_for('entry_by_date', date_str=prev_day.day) }}" class="link">Prev</a></li>
+          <li class="item prev"><a href="{{ url_for('entry_by_date', date_str=prev_day.day) }}" class="link">Older</a></li>
         {% endif %}
 
         {% if next_day %}
-          <li class="item next"><a href="{{ url_for('entry_by_date', date_str=next_day.day) }}" class="link">Next</a></li>
+          <li class="item next"><a href="{{ url_for('entry_by_date', date_str=next_day.day) }}" class="link">Newer</a></li>
         {% endif %}
 
       </ul>
@@ -38,7 +38,7 @@
 
   {% if entries %}
   
-  <div class="entries">
+  <div class="entry-list entries">
 
   {% for entry in entries %}
 
@@ -48,13 +48,13 @@
 
       <ul class="entry-values">
         
-        <li class="entry-val-item {{ types[entry.type]|lower|replace(' ', '-') }}"><span class="entry-val-label">{{ types[entry.type] }}:</span> <span class="entry-val">{{ entry.val }}</span></li>
+        <li class="entry-val-item field-{{ types[entry.type]|lower|replace(' ', '-') }}"><span class="entry-val-label">{{ types[entry.type] }}</span> <span class="entry-val">{{ entry.val }}</span></li>
       
         {% if entry.children is defined %}
           
           {% for subentry in entry.children %}
           
-            <li class="entry-val-item {{ types[subentry.type]|lower|replace(' ', '-') }}"><span class="entry-val-label">{{ types[subentry.type] }}:</span> <span class="entry-val">{{ subentry.val }}</span></li>
+            <li class="entry-val-item field-{{ types[subentry.type]|lower|replace(' ', '-') }}"><span class="entry-val-label">{{ types[subentry.type] }}</span> <span class="entry-val">{{ subentry.val }}</span></li>
           
           {% endfor %}
           
@@ -64,7 +64,7 @@
 
     </section>
     
-    <hr>
+    {% if not loop.last %}<hr class="separator">{% endif %}
 
   {% endfor %}
   
