--- a/app/templates/entry/new.html
+++ b/app/templates/entry/new.html
@@ -20,7 +20,7 @@
 
       <legend class="legend">Required</legend>
 
-      <div class="field-wrap field-{{ form.overall.name|lower|replace(' ','-') }} entry-val-item">
+      <div class="field-wrap field-{{ form.overall.label.text|lower|replace(' ','-') }} entry-val-item">
         <span class="label-wrap entry-val-label">{{ form.overall.label(class="label") }}</span>
         <span class="entry-val">2.5</span>
         <span class="input-wrap">{{ form.overall(min='0', max='5', step="0.5", value="2.5") }}</span>
@@ -40,7 +40,7 @@
 
       <legend class="legend">Optional</legend>
 
-      <div class="field-wrap field-{{ form.outlook.name|lower|replace(' ','-') }} entry-val-item">
+      <div class="field-wrap field-{{ form.outlook.label.text|lower|replace(' ','-') }} entry-val-item">
         <span class="label-wrap entry-val-label">{{ form.outlook.label(class="label") }}</span>
         <span class="entry-val">0</span>
         <span class="input-wrap">{{ form.outlook(min='0', max='5', step="0.5", value="0") }}</span>
@@ -53,7 +53,7 @@
         {% endif %}
       </div>
       
-      <div class="field-wrap field-{{ form.energy.name|lower|replace(' ','-') }} entry-val-item">
+      <div class="field-wrap field-{{ form.energy.label.text|lower|replace(' ','-') }} entry-val-item">
         <span class="label-wrap entry-val-label">{{ form.energy.label(class="label") }}</span>
         <span class="entry-val">0</span>
         <span class="input-wrap">{{ form.energy(min='0', max='5', step="0.5", value="0") }}</span>
@@ -66,7 +66,7 @@
         {% endif %}
       </div>
 
-      <div class="field-wrap field-{{ form.focus.name|lower|replace(' ','-') }} entry-val-item">
+      <div class="field-wrap field-{{ form.focus.label.text|lower|replace(' ','-') }} entry-val-item">
         <span class="label-wrap entry-val-label">{{ form.focus.label(class="label") }}</span>
         <span class="entry-val">0</span>
         <span class="input-wrap">{{ form.focus(min='0', max='5', step="0.5", value="0") }}</span>
