added account link to main nav

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,7 +69,15 @@
     
       <ul class="nav-items">
         
-        <li class="nav-item home"><a href="{{ url_for('index') }}" class="link">Home</a>
+        {% if request.endpoint == 'dashboard' %}
+        
+          <li class="nav-item account"><a href="{{ url_for('account') }}" class="link">My Account</a>
+            
+        {% else %}
+        
+          <li class="nav-item home"><a href="{{ url_for('index') }}" class="link">Home</a>
+        
+        {% endif %}
     
         {% if current_user.is_authenticated %}
     
